<resources>
    <string name="app_name">FarmFa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Giám sát nông nghiệp</string>
    <string name="nav_header_subtitle">Bản quyền &copy; 2019-2022 Smart Farm  </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_vi">Cài đặt</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_mode">Chế độ</string>
    <string name="menu_gallery">Quản lý khu vườn </string>
    <string name="menu_share">Quản lý khối lượng chất</string>
    <string name="menu_send">Quản lý sản lượng </string>
    <string name="menu_vegetable">Quản lý các loại rau</string>
    <string name="menu_device_category">Quản lý loại thiết bị</string>
    <string name="menu_device">Quản lý thiết bị  </string>
    <string name="menu_thamso">Quản lý tham số </string>
    <string name="menu_users">Quản lý người dùng</string>
    <string name="menu_infor">Thông tin &amp; điều khiển</string>
    <string name="menu_manager">Quản trị</string>
    <string name="email">Email </string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="userName">User Name</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="selected_item">Selected item:</string>
    <string name="title_context_menu"> Tuỳ chọn </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_start_date_batch">Enter Valid Start Date</string>
    <string name="batch_add_success">Insert Data Successfully</string>
    <string name="batch_add_failed">Insert Data failed</string>
    <string name="error_end_date_batch">Enter Valid End Date</string>
    <string name="error_name_batch">Enter Valid Name</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_confirm_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="fail_message">Registration Fail</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_common_email_password">Email and password are incorrect!</string>
    <string name="status_login_vi">Lưu trạng thái đăng nhập</string>
    <string name="user_name_login_vi">Nhập email...</string>
    <string name="password_login_vi">Nhập mật khẩu...</string>
    <string name="sign_up_vi">Đăng ký</string>
    <string name="send_email_vi">Gửi email</string>
    <string name="login_vi">Đăng nhập</string>
    <string name="forgot_pass_vi">Quên mật khẩu ?</string>
    <string name="forgot_pass_title_vi">Quên mật khẩu</string>
    <string name="gender_vi">Giới tính</string>
    <string name="user_name_vi">Tên đăng nhập</string>
    <string name="full_name_vi">Tên đầy đủ</string>
    <string name="enter_email_vi">Nhập email đã đăng ký</string>
    <string name="passowrd_vi">Nhập mật khẩu</string>
    <string name="old_passowrd_vi">Nhập mật khẩu cũ</string>
    <string name="passowrd_new_vi">Nhập mật khẩu mới</string>
    <string name="confirm_passoword_vi">Nhập lại mật khẩu</string>
    <string name="confirm_passoword_new_vi">Nhập lại mật khẩu</string>
    <string name="already_user_vi">Bạn đã có tài khoản? Đăng nhập ngay.</string>
    <string name="return_login_vi">Quay lại đăng nhập</string>
    <string name="back_home_vi">Quay lại trang chủ</string>
    <string name="add_veg_vi">Thêm chi tiết</string>
    <string name="error_empty_common">Trường này không được để trống !</string>
    <string name="error_match_password">Mật khẩu đăng ký không khớp !</string>
    <string name="error_match_password_1">Mật khẩu mới không khớp !</string>
    <string name="error_old_password">Mật khẩu cũ không đúng !</string>
    <string name="error_invalid_email">Trường email không hợp lệ !</string>
    <string name="error_invalid_email_exits">Email đã tồn tại !</string>
    <string name="sign_up_success">Đăng ký thành công !</string>
    <string name="sign_blocked">Tài khoản này đã bị khóa !</string>
    <string name="sign_up_fail">Đăng ký thất bại !</string>
    <string name="error_username_pass_invalid">Tên đăng nhập hoặc mật khẩu không đúng !</string>
    <string name="error_veg_exist">Loại rau này đã tồn tại !</string>
    <string name="error_device_exist">Loại thiết bị này đã tồn tại !</string>
    <string name="error_garden_exist">Khu vườn này đã tồn tại !</string>
    <string name="error_batch_exist">Đợt này đã tồn tại !</string>
    <string name="error_to_smaller_from">Giá trị đến không được nhỏ hơn giá trị từ</string>
    <string name="choose_img_vi">Chọn hình ảnh</string>
    <string name="insert_data_success_vi">Thêm thành công !</string>
    <string name="update_data_success_vi">Cập nhật thành công !</string>
    <string name="insert_data_fail_vi">Thêm không thành công !</string>
    <string name="update_data_fail_vi">Cập nhật không thành công !</string>
    <string name="deleted_data_success_vi">Xóa thành công !</string>
    <string name="size_image_large">Kích thước ảnh quá lớn !</string>
    <string name="image_no_select_vi">Bạn chưa chọn ảnh !</string>
    <string name="add_vi">Thêm</string>
    <string name="update_vi">Cập nhật</string>
    <string name="cancel_vi">Thoát</string>
    <string name="view_vi">Xem hình ảnh</string>
    <string name="quit_vi">Hủy</string>
    <string name="yes_vi">Có</string>
    <string name="print_vi">In</string>
    <string name="no_data_vi">Không có dữ liệu</string>
    <string name="delete_title_all_vi">Bạn có chắc chắn muốn xóa không ?</string>
    <string name="name_kv_vi">Tên khu vườn</string>
    <string name="delete_kv_vi">Xóa khu vườn</string>
    <string name="list_garden_is_empty">Danh sách khu vườn đang trống !</string>
    <string name="setting_code_arduino_send_mail">Mã cài đặt arduino của khu vườn</string>
    <string name="code_garden_send_mail">Mã khu vườn: </string>
    <string name="delete_detail_device">Xóa chi tiết thiết bị</string>
    <string name="Veg_title_vi">Loại rau được trồng</string>
    <string name="Veg_Empty_Message_vi">Danh sách loại rau đang trống !</string>
    <string name="error_empty_veg_category_common">Trường loại rau không được để trống !</string>
    <string name="add_veg">Thêm loại rau</string>
    <string name="enter_name_veg">Nhập tên rau</string>
    <string name="add_veg_for_garden">Đã thêm loại rau</string>
    <string name="delete_veg_for_garden">Đã xóa loại rau</string>
    <string name="add_only_veg">Chỉ được thêm một loại rau cho khu vườn</string>
    <string name="firt_count_veg">Đã thêm</string>
    <string name="last_count_veg">loại rau</string>
    <string name="error_empty_device_category_common">Trường loại thiết bị không được để trống !</string>
    <string name="error_empty_device_using_common">Trường mục đích sử dụng không được để trống !</string>
    <string name="error_empty_device_home_info">Danh sách thiết bị hiển thị thông tin đang trống !</string>
    <string name="error_empty_device_home_control">Danh sách thiết bị điều khiển đang trống !</string>
    <string name="name_device_vi">Tên thiết bị</string>
    <string name="decription_device_vi">Mô tả thiết bị</string>
    <string name="broken_device_vi">Hư hỏng</string>
    <string name="control_device_vi">Điều khiển thiết bị</string>
    <string name="control_device_setting_vi">Thiết bị đã cài đặt</string>
    <string name="message_unSetting_vi">Đã gỡ cài đặt thiết bị</string>
    <string name="message_Setting_vi">Đã cài đặt thiết bị</string>
    <string name="select_device_and_veg_vi">Đã thêm (0) thiết bị</string>
    <string name="select_veg_vi">Đã thêm (0) loại rau</string>
    <string name="list_device_isEmpty_vi">Danh sách thiết bị đang trống !</string>
    <string name="add_device">Thêm thiết bị</string>
    <string name="last_count_device">thiết bị</string>
    <string name="device_exist">Thiết bị đã tồn tại</string>
    <string name="device_name_send_mail">Mã cài đặt arduino của</string>
    <string name="device_code_send_mail">Mã thiết bị</string>
    <string name="delete_device_category">Xóa loại thiết bị</string>
    <string name="device_category_is_empty">Danh sách loại thiết bị đang trống</string>
    <string name="decription_Temperature_vi">Nhiệt độ (°C)</string>
    <string name="decription_Humidity_vi">Độ ẩm (%)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="from_vi">Từ</string>
    <string name="to_vi">Đến</string>
    <string name="day_vi">Ban ngày</string>
    <string name="night_vi">Ban đêm</string>
    <string name="temp_param_vi">Nhiệt độ (°C)</string>
    <string name="message_setting_param">Tham số đã được cài đặt cho loại rau này !</string>
    <string name="message_no_setting_param">Chưa cài đặt tham số cho loại rau này !</string>
    <string name="no_setting_param_vi">Chưa cài đặt tham số</string>
    <string name="setting_param_vi">Đã cài đặt tham số</string>
    <string name="select_language_vi">Chọn ngôn ngữ</string>
    <string name="language_vi_en">Ngôn ngữ</string>
    <string name="change_pass_vi">Đổi mật khẩu</string>
    <string name="log_out_system_vi">Đăng xuất</string>
    <string name="account_vi">Tài khoản và mật khẩu</string>
    <string name="block_user_vi">Khóa</string>
    <string name="lang_vi">Tiếng Việt</string>
    <string name="lang_en">Tiếng Anh</string>
    <string name="lang_ja">Tiếng Nhật</string>
</resources>