<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.appveg.farmfamily.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mode"
        android:name="com.appveg.farmfamily.ui.mode.ModeFragment"
        android:label="@string/menu_mode"
        tools:layout="@layout/fragment_mode" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.appveg.farmfamily.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users"  />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.appveg.farmfamily.ui.garden.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.appveg.farmfamily.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.appveg.farmfamily.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_thamso"
        android:name="com.appveg.farmfamily.ui.param.ThamSoFragment"
        android:label="@string/menu_thamso"
        tools:layout="@layout/fragment_thamso" />


    <fragment
        android:id="@+id/nav_vegetable"
        android:name="com.appveg.farmfamily.ui.vegetable.VegetableFragment"
        android:label="@string/menu_vegetable"
        tools:layout="@layout/fragment_vegetable" />

    <fragment
        android:id="@+id/nav_device_category"
        android:name="com.appveg.farmfamily.ui.device_catogory.DeviceCategoryFragment"
        android:label="@string/menu_device_category"
        tools:layout="@layout/fragment_device_category" />

    <fragment
        android:id="@+id/nav_device"
        android:name="com.appveg.farmfamily.ui.device.DeviceFragment"
        android:label="@string/menu_device"
        tools:layout="@layout/fragment_device" />


</navigation>