<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!-- add RadioGroup which contain the many RadioButton-->
    <RadioGroup
        android:layout_marginTop="20dp"
        android:id="@+id/radio_group"
        android:layout_marginLeft="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!-- In RadioGroup create the 1 Radio Button-->
        <!-- like this we will add some more Radio Button-->
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_vi"
            android:text="@string/lang_vi"
            android:textSize="16dp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_en"
            android:text="@string/lang_en"
            android:textSize="16dp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_ja"
            android:text="@string/lang_ja"
            android:textSize="16dp"/>
    </RadioGroup>


</RelativeLayout>