<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="158dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:padding="16dp"
                android:src="@drawable/logo5"></ImageView>

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/user_name_login_vi"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#FFFFFF" />

            <View
                android:id="@+id/view_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F9D7DB" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password_login_vi"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F9D7DB" />

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:textColor="#FFFFFF"
                android:paddingLeft="8dp"
                android:buttonTint="@color/colorWhite"
                android:textStyle="italic"
                android:text="@string/status_login_vi"
                />
            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_them"
                android:text="@string/login_vi"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:clickable="true"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/btSignup"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_signup"
                android:padding="3dp"
                android:text="@string/sign_up_vi"
                android:textAllCaps="false"
                android:textColor="#FFFF"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtforgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_vi"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FFFFFF"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="16dp"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>